<resources>
    <string name="app_name">PrimeiraAplicação</string>
    <string name="botao1">Iniciar</string>
    <string name="InicioCase">Iniciar Casimiro</string>
    <string name="botao2">Adicionar</string>
    <string name="botao3">Favoritos</string>
    <string name="botao4">Configurações</string>
    <string name="grid1">grid1</string>
    <string name="grid2">grid2</string>
    <string name="grid3">grid3</string>
    <string name="grid4">grid4</string>
    <string name="grid5">grid5</string>
    <string name="grid6">grid6</string>
    <string name="grid7">grid7</string>
    <string name="grid8">grid8</string>
    <string name="grid9">grid9</string>
    <string name="string1">Adicionar foto do audio</string>
    <string name="botao5">+</string>
    <string name="string2">nome do audio</string>
    <string name="botao6">Fazer upload de um audio</string>
    <string name="botao7">Salvar</string>
    <string name="stringmenu">Menu</string>
    <string name="stringadd">Adicionar audio</string>
    <string name="stringfav">Audios favoritos</string>
    <string name="audio1">Meteu essa?</string>
    <string name="audio2">Aceitas pix</string>
    <string name="audio3">Ih,mané</string>
    <string name="audio4">O pai amassa</string>
    <string name="audio5">Ta perdidinho</string>
    <string name="audio6">Peguei na curva</string>
    <string name="audio7">Ta ligado</string>
    <string name="audio8">Paizão</string>
    <string name="audio9">É duro</string>
    <string name="todo">TODO</string>
    <string name="audiofav1">Angolano</string>
    <string name="audiofav2">Bola pro proximo</string>
    <string name="audiofav3">caiu machado hoje</string>
    <string name="audiofav4">Ele trava</string>
    <string name="audiofav5">Brincadeira né</string>
    <string name="audiofav6">dois e uma coquinha</string>
    <string name="contentCasefav">caseFav</string>
    <string name="config">Configurações</string>
    <string name="Configbtn1">Canal Youtube</string>
    <string name="Configbtn2">Comunidade discord</string>
    <string name="Configbtn3">Instagram</string>
    <string name="Configbtn4">Backup de audios</string>
    <string name="Configbtn5">Sons e notificações</string>
    <string name="Configbtn6">Audios baixados</string>
</resources>