<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context=".TelaMenu"
    tools:layout_editor_absoluteX="-8dp"
    tools:layout_editor_absoluteY="-34dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BDBDBD"
        tools:context=".TelaMenu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/grid1"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:contentDescription="@string/grid1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08"
            app:srcCompat="@drawable/grid3"
            tools:srcCompat="@drawable/grid3" />

        <ImageView
            android:id="@+id/grid5"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:contentDescription="@string/grid5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grid6"
            app:layout_constraintHorizontal_bias="0.559"
            app:layout_constraintStart_toEndOf="@+id/grid4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.442"
            app:srcCompat="@drawable/grid5"
            tools:srcCompat="@drawable/grid5" />

        <ImageView
            android:id="@+id/grid8"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:contentDescription="@string/grid8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grid9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794"
            app:srcCompat="@drawable/grid8"
            tools:srcCompat="@drawable/grid8" />

        <ImageView
            android:id="@+id/grid"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:contentDescription="@string/grid9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grid8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:srcCompat="@drawable/grid9"
            tools:srcCompat="@drawable/grid9" />

        <ImageView
            android:id="@+id/grid6"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:contentDescription="@string/grid6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.673"
            app:layout_constraintStart_toEndOf="@+id/grid1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.442"
            app:srcCompat="@drawable/grid6" />

        <ImageView
            android:id="@+id/grid9"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:contentDescription="@string/grid7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794"
            app:srcCompat="@drawable/grid7" />

        <ImageView
            android:id="@+id/grid4"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:contentDescription="@string/grid4"
            android:rotationX="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/grid5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431"
            app:srcCompat="@drawable/grid4" />

        <Button
            android:id="@+id/botao2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/botao2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/favoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/botao3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/botao2"
            app:layout_constraintTop_toBottomOf="@+id/grid8"
            app:layout_constraintVertical_bias="0.809" />

        <Button
            android:id="@+id/config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.912"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.964" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stringmenu"
            android:textColor="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="28dp"
            android:text="@string/audio2"
            android:textColor="#424242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="28dp"
            android:text="@string/audio3"
            android:textColor="#424242"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/grid1" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/audio4"
            android:textColor="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/grid3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/audio5"
            android:textColor="#424242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginLeft="172dp"
            android:layout_marginTop="12dp"
            android:text="@string/audio1"
            android:textColor="#424242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/audio6"
            android:textColor="#424242"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/audio7"
            android:textColor="#424242"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.26"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:text="@string/audio8"
            android:textColor="#424242"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/grid8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio9"
            android:textColor="#424242"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.859"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.877"
            tools:text="@string/audio9" />

        <ImageView
            android:id="@+id/grid2"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:layout_marginTop="48dp"
            android:rotationX="0"
            app:layout_constraintEnd_toStartOf="@+id/grid1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/grid1" />

        <ImageView
            android:id="@+id/grid3"
            android:layout_width="104dp"
            android:layout_height="136dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/grid1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/grid2" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>